--- a/package.json
+++ b/package.json
@@ -7,11 +7,28 @@
   "author": "Jeff Peterson <jeff@yak.sh>",
   "license": "MIT",
   "private": true,
+  "scripts": {
+    "start": "node -r ts-node/register ./src/server",
+    "build": "webpack"
+  },
   "devDependencies": {
+    "@types/express": "^4.16.0",
+    "@types/html-webpack-plugin": "^3.2.0",
     "@types/node": "^10.12.0",
     "@types/webpack": "^4.4.17",
+    "@types/webpack-dev-middleware": "^2.0.2",
+    "elm": "^0.19.0-bugfix2",
+    "elm-typescript-interop": "^0.0.15",
+    "elm-webpack-loader": "^5.0.0",
+    "express": "^4.16.4",
+    "html-webpack-plugin": "^3.2.0",
     "prettier": "^1.14.3",
+    "prettier-plugin-elm": "^0.4.1",
+    "ts-loader": "^5.2.2",
     "ts-node": "^7.0.1",
-    "typescript": "^3.1.3"
+    "typescript": "^3.1.3",
+    "webpack": "^4.23.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-middleware": "^3.4.0"
   }
 }
