--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@types/node": "^10.12.0",
     "@types/webpack": "^4.4.17",
     "@types/webpack-dev-middleware": "^2.0.2",
+    "@types/webpack-dev-server": "^3.1.1",
+    "@types/webpack-hot-middleware": "^2.16.4",
     "elm": "^0.19.0-bugfix2",
+    "elm-hot-webpack-loader": "^1.0.2",
     "elm-typescript-interop": "^0.0.15",
     "elm-webpack-loader": "^5.0.0",
     "express": "^4.16.4",
@@ -29,6 +32,10 @@
     "typescript": "^3.1.3",
     "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-middleware": "^3.4.0"
+    "webpack-dev-middleware": "^3.4.0",
+    "webpack-hot-middleware": "^2.24.3"
+  },
+  "dependencies": {
+    "node-elm-compiler": "^5.0.1"
   }
 }
