--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "private": true,
   "scripts": {
     "start": "node -r ts-node/register ./src/server",
-    "build": "webpack"
+    "build": "webpack",
+    "types": "./bin/types.sh"
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
