--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   "scripts": {
     "start": "node -r ts-node/register ./src/server",
     "build": "webpack",
-    "types": "./bin/types.sh"
+    "types": "./bin/types.sh",
+    "elm": "elm-typescript-interop"
   },
   "devDependencies": {
+    "@types/debug": "^0.0.31",
     "@types/express": "^4.16.0",
+    "@types/express-ws": "^3.0.0",
     "@types/html-webpack-plugin": "^3.2.0",
     "@types/node": "^10.12.0",
+    "@types/tmp": "^0.0.33",
     "@types/webpack": "^4.4.17",
     "@types/webpack-dev-middleware": "^2.0.2",
     "@types/webpack-dev-server": "^3.1.1",
@@ -37,6 +41,9 @@
     "webpack-hot-middleware": "^2.24.3"
   },
   "dependencies": {
-    "node-elm-compiler": "^5.0.1"
+    "debug": "^4.1.0",
+    "express-ws": "^4.0.0",
+    "node-elm-compiler": "^5.0.1",
+    "tmp": "^0.0.33"
   }
 }
