--- a/package.json
+++ b/package.json
@@ -2,19 +2,23 @@
   "name": "realm",
   "version": "1.0.0",
   "description": "Runtime-editable elm.",
-  "main": "index.js",
+  "main": "dist/electron.js",
   "repository": "https://github.com/inkandswitch/realm",
   "author": "Jeff Peterson <jeff@yak.sh>",
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "node -r ts-node/register ./src/server",
+    "start": "concurrently 'yarn server' 'sleep 3 && yarn start-app'",
+    "server": "node -r ts-node/register ./src/server",
+    "start-app": "electron .",
     "build": "webpack",
+    "app": "yarn build && yarn start-app",
     "types": "./bin/types.sh",
     "elm": "elm-typescript-interop"
   },
   "devDependencies": {
     "@types/debug": "^0.0.31",
+    "@types/electron": "^1.6.10",
     "@types/express": "^4.16.0",
     "@types/express-ws": "^3.0.0",
     "@types/html-webpack-plugin": "^3.2.0",
@@ -24,6 +28,8 @@
     "@types/webpack-dev-middleware": "^2.0.2",
     "@types/webpack-dev-server": "^3.1.1",
     "@types/webpack-hot-middleware": "^2.16.4",
+    "concurrently": "^4.0.1",
+    "electron": "^3.0.7",
     "elm": "^0.19.0-bugfix2",
     "elm-hot-webpack-loader": "^1.0.2",
     "elm-typescript-interop": "^0.0.15",
