Wire up js side of hypermerge

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "typeRoots": ["./node_modules/@types", "./src/node_modules/@types"],
     "sourceMap": true,
-    "lib": ["es2015", "dom"],
+    "lib": ["es2015", "dom", "webworker"],
     "module": "commonjs",
     "target": "es5",
     "esModuleInterop": true,
