--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@types/debug": "^0.0.31",
+    "@types/deep-diff": "^1.0.0",
     "@types/electron": "^1.6.10",
     "@types/express": "^4.16.0",
     "@types/express-ws": "^3.0.0",
@@ -48,6 +49,7 @@
   },
   "dependencies": {
     "debug": "^4.1.0",
+    "deep-diff": "^1.0.2",
     "express-ws": "^4.0.0",
     "hypermerge": "github:automerge/hypermerge#picomerge",
     "node-elm-compiler": "^5.0.1",
