Get hypermerge working

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/webpack-dev-middleware": "^2.0.2",
     "@types/webpack-dev-server": "^3.1.1",
     "@types/webpack-hot-middleware": "^2.16.4",
+    "@types/webpack-node-externals": "^1.6.3",
     "concurrently": "^4.0.1",
     "electron": "^3.0.7",
     "elm": "^0.19.0-bugfix2",
@@ -45,12 +46,14 @@
     "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.4.0",
-    "webpack-hot-middleware": "^2.24.3"
+    "webpack-hot-middleware": "^2.24.3",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
     "debug": "^4.1.0",
     "deep-diff": "^1.0.2",
     "express-ws": "^4.0.0",
+    "hypercore": "^6.21.0",
     "hypermerge": "github:automerge/hypermerge#picomerge",
     "node-elm-compiler": "^5.0.1",
     "random-access-memory": "^3.0.0",
