--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "build": "webpack",
     "app": "yarn build && yarn start-app",
     "types": "./bin/types.sh",
-    "elm": "elm-typescript-interop"
+    "elm": "elm-typescript-interop",
+    "nettest": "yarn build --config-name=nettest && node dist/nettest.js"
   },
   "devDependencies": {
+    "@types/bs58": "^3.0.30",
     "@types/debug": "^0.0.31",
     "@types/deep-diff": "^1.0.0",
     "@types/electron": "^1.6.10",
@@ -50,6 +52,9 @@
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
+    "@types/ws": "^6.0.1",
+    "automerge": "0.9.1",
+    "bs58": "^4.0.1",
     "debug": "^4.1.0",
     "deep-diff": "^1.0.2",
     "express-ws": "^4.0.0",
@@ -57,6 +62,7 @@
     "hypermerge": "github:automerge/hypermerge#picomerge",
     "node-elm-compiler": "^5.0.1",
     "random-access-memory": "^3.0.0",
-    "tmp": "^0.0.33"
+    "tmp": "^0.0.33",
+    "ws": "^6.1.0"
   }
 }
