--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
   },
   "dependencies": {
     "@types/ws": "^6.0.1",
-    "automerge": "0.9.1",
+    "automerge": "^0.9.2",
     "bs58": "^4.0.1",
     "debug": "^4.1.0",
     "deep-diff": "^1.0.2",
