--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
     "editor.detectIndentation": false,
     "editor.insertSpaces": true,
     "editor.tabSize": 4
-  }
+  },
+  "elm.formatCommand": "./node_modules/.bin/elm-format"
 }
