--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "types": "./bin/types.sh",
     "elm": "elm-typescript-interop",
     "counter": "yarn build --config-name=counter && node dist/counter.js",
-    "cat": "yarn build --config-name=doccat && node dist/doccat.js"
+    "cat": "yarn build --config-name=doccat && node dist/doccat.js",
+    "realm": "node -r ts-node/register ./src/js/cli/realm.ts",
+    "bot": "yarn realm bot"
   },
   "devDependencies": {
     "@types/bs58": "^3.0.30",
+    "@types/commander": "^2.12.2",
     "@types/debug": "^0.0.31",
     "@types/deep-diff": "^1.0.0",
     "@types/electron": "^1.6.10",
@@ -57,6 +60,7 @@
     "@types/ws": "^6.0.1",
     "automerge": "^0.9.2",
     "bs58": "^4.0.1",
+    "commander": "^2.19.0",
     "debug": "^4.1.0",
     "deep-diff": "^1.0.2",
     "express-ws": "^4.0.0",
@@ -66,6 +70,7 @@
     "node-elm-compiler": "^5.0.1",
     "random-access-file": "^2.0.1",
     "random-access-memory": "^3.0.0",
+    "tiny-worker": "^2.1.2",
     "tmp": "^0.0.33",
     "ws": "^6.1.0"
   }
