--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "deep-diff": "github:jeffpeterson/diff",
     "express-ws": "^4.0.0",
     "hypercore": "^6.21.0",
-    "hypermerge": "github:automerge/hypermerge#hyper3",
+    "hypermerge": "github:automerge/hypermerge#fork",
     "lodash": "^4.17.11",
     "node-elm-compiler": "^5.0.1",
     "random-access-file": "^2.0.1",
