Add context menu

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "commander": "^2.19.0",
     "debug": "^4.1.0",
     "deep-diff": "github:jeffpeterson/diff",
+    "electron-context-menu": "^0.10.1",
     "express-ws": "^4.0.0",
     "hypercore": "^6.21.0",
     "hypermerge": "github:automerge/hypermerge#hyper3",
