--- a/package.json
+++ b/package.json
@@ -23,24 +23,17 @@
     "@types/bs58": "^3.0.30",
     "@types/commander": "^2.12.2",
     "@types/debug": "^0.0.31",
-    "@types/deep-diff": "^1.0.0",
     "@types/electron": "^1.6.10",
     "@types/express": "^4.16.0",
-    "@types/express-ws": "^3.0.0",
     "@types/html-webpack-plugin": "^3.2.0",
     "@types/lodash": "^4.14.118",
     "@types/node": "^10.12.0",
-    "@types/tmp": "^0.0.33",
     "@types/webpack": "^4.4.17",
     "@types/webpack-dev-middleware": "^2.0.2",
-    "@types/webpack-dev-server": "^3.1.1",
-    "@types/webpack-hot-middleware": "^2.16.4",
     "@types/webpack-node-externals": "^1.6.3",
     "concurrently": "^4.0.1",
     "cross-env": "^5.2.0",
     "electron": "^3.0.7",
-    "elm": "^0.19.0-bugfix2",
-    "elm-hot-webpack-loader": "^1.0.2",
     "elm-webpack-loader": "^5.0.0",
     "express": "^4.16.4",
     "html-webpack-plugin": "^3.2.0",
@@ -52,19 +45,15 @@
     "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.4.0",
-    "webpack-hot-middleware": "^2.24.3",
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
-    "@types/ws": "^6.0.1",
     "automerge": "^0.9.2",
     "bs58": "^4.0.1",
     "commander": "^2.19.0",
     "debug": "^4.1.0",
-    "deep-diff": "github:jeffpeterson/diff",
     "discovery-swarm": "^5.1.2",
     "electron-context-menu": "^0.10.1",
-    "express-ws": "^4.0.0",
     "hypercore": "^6.21.0",
     "hypermerge": "github:automerge/hypermerge#fork",
     "lodash": "^4.17.11",
@@ -72,8 +61,6 @@
     "odiff": "github:inkandswitch/odiff",
     "random-access-file": "^2.0.1",
     "random-access-memory": "^3.0.0",
-    "tiny-worker": "^2.1.2",
-    "tmp": "^0.0.33",
-    "ws": "^6.1.0"
+    "tiny-worker": "^2.1.2"
   }
 }
