--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/html-webpack-plugin": "^3.2.0",
     "@types/lodash": "^4.14.118",
     "@types/node": "^10.12.0",
+    "@types/proper-lockfile": "^3.0.0",
     "@types/webpack": "^4.4.17",
     "@types/webpack-dev-middleware": "^2.0.2",
     "@types/webpack-node-externals": "^1.6.3",
@@ -59,6 +60,7 @@
     "lodash": "^4.17.11",
     "node-elm-compiler": "^5.0.1",
     "odiff": "github:inkandswitch/odiff",
+    "proper-lockfile": "^3.2.0",
     "random-access-file": "^2.0.1",
     "random-access-memory": "^3.0.0",
     "tiny-worker": "^2.1.2"
