--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "automerge": "^0.9.2",
     "bs58": "^4.0.1",
     "commander": "^2.19.0",
+    "dat-swarm-defaults": "^1.0.1",
     "debug": "^4.1.0",
     "discovery-swarm": "^5.1.2",
     "electron-context-menu": "^0.10.1",
