--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
   "name": "realm",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Runtime-editable elm.",
   "main": "dist/electron.js",
   "repository": "https://github.com/inkandswitch/realm",
-  "author": "Jeff Peterson <jeff@yak.sh>",
-  "license": "MIT",
+  "author": "Jeff Peterson <jeff@yak.sh>, Peter van Hardenberg <pvh@pvh.ca>, Matt Tognetti <mtognetti@gmail.com>",
+  "license": "BSD",
   "private": true,
   "scripts": {
-    "start": "concurrently 'yarn server' 'sleep 3 && yarn start-app'",
-    "server": "node -r ts-node/register ./src/server",
-    "start-app": "yarn build --config-name=electron && electron .",
+    "start": "yarn build --config-name=electron && electron .",
     "build": "webpack",
     "app": "yarn build && yarn start-app",
     "types": "./bin/types.sh",
@@ -33,7 +31,6 @@
     "@types/webpack": "^4.4.17",
     "@types/webpack-dev-middleware": "^2.0.2",
     "@types/webpack-node-externals": "^1.6.3",
-    "concurrently": "^4.0.1",
     "cross-env": "^5.2.0",
     "electron": "^3.0.7",
     "electron-rebuild": "^1.8.2",
