--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "random-access-file": "^2.0.1",
     "random-access-memory": "^3.0.0",
     "tiny-worker": "^2.1.2",
+    "utp-native": "^2.1.3",
     "xmlhttprequest": "^1.8.0"
   }
 }
