--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/debug": "^0.0.31",
     "@types/electron": "^1.6.10",
     "@types/express": "^4.16.0",
+    "@types/hard-source-webpack-plugin": "^1.0.0",
     "@types/html-webpack-plugin": "^3.2.0",
     "@types/lodash": "^4.14.118",
     "@types/node": "^10.12.0",
@@ -34,6 +35,7 @@
     "electron-rebuild": "^1.8.2",
     "elm-webpack-loader": "^5.0.0",
     "express": "^4.16.4",
+    "hard-source-webpack-plugin": "^0.13.1",
     "html-webpack-plugin": "^3.2.0",
     "prettier": "^1.14.3",
     "prettier-plugin-elm": "^0.4.1",
