--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "cross-env TS_NODE_CACHE_DIRECTORY=.ts-cache webpack",
     "app": "yarn build && yarn start-app",
     "types": "./bin/types.sh",
-    "realm": "cross-env REPO_ROOT=./.data/bots node ./dist/realm.js",
+    "realm": "yarn build && cross-env REPO_ROOT=./.data/bots node ./dist/realm.js",
     "bot": "yarn realm bot"
   },
   "devDependencies": {
