--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "commander": "^2.19.0",
     "dat-swarm-defaults": "^1.0.1",
     "debug": "^4.1.0",
+    "discovery-cloud-client": "^0.0.1",
     "discovery-swarm": "^5.1.2",
     "electron-context-menu": "^0.10.1",
     "elm": "^0.19.0-bugfix2",
