--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "discovery-swarm": "^5.1.2",
     "electron-context-menu": "^0.10.1",
     "elm": "^0.19.0-bugfix2",
+    "elm-format": "^0.8.1",
     "hypercore": "^6.21.0",
     "hypermerge": "github:automerge/hypermerge#fork",
     "lodash": "^4.17.11",
