--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,6 @@
     // "hypermerge:/9wUHvu5xFTZmdCkmjy9kDqy6CMq5Dn1uu6nEhvnKt4bx",
     // "hypermerge:/2f811DqW9VhM4xzASENiQo7oTcvMpGq9irGmewVz6tr3",
     // "hypermerge:/RxJmxe9P7dZrWLcfFYp7VqF7uHf7EGW2xjs7CrCv7xD"
-  ]
+  ],
+  "elm.compiler": "./node_modules/elm/bin/elm"
 }
