--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "discovery-cloud-client": "^0.0.1",
     "discovery-swarm": "^5.1.2",
     "electron-context-menu": "^0.10.1",
-    "elm": "^0.19.0-bugfix2",
+    "elm": "^0.19.0",
     "elm-format": "^0.8.1",
     "hypercore": "^6.21.0",
     "hypermerge": "github:automerge/hypermerge#fork",
@@ -74,5 +74,8 @@
     "tiny-worker": "^2.1.2",
     "utp-native": "^2.1.3",
     "xmlhttprequest": "^1.8.0"
+  },
+  "resolutions": {
+    "elm": "file:./src/node_modules/elm"
   }
 }
