--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
+    "@types/text-encoding": "^0.0.35",
     "automerge": "^0.9.2",
     "bs58": "^4.0.1",
     "commander": "^2.19.0",
@@ -71,6 +72,7 @@
     "pseudo-worker": "^1.2.0",
     "random-access-file": "^2.0.1",
     "random-access-memory": "^3.0.0",
+    "text-encoding": "^0.7.0",
     "tiny-worker": "^2.1.2",
     "utp-native": "^2.1.3",
     "xmlhttprequest": "^1.8.0"
